--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     .page {
       max-width: 800px;
-      margin: 20px auto 10px;
-      padding: 20px;
+      margin: 10px auto 10px;
+      padding: 10px 20px;
       box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.15);
       background-color: #fff;
     }
@@ -129,14 +129,14 @@
       <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest p-t-0 p-b-0">
           <div class="row">
-            <div class="col-4 p-t-10 p-b-10">● 费晗 | 女 | 1993</div>
+            <div class="col-4 p-t-10 p-b-10">● 费晗 | 女 </div>
             <div class="col-4 p-t-10 p-b-10 border">● 武汉生物工程学院 | 计算机网络</div>
-            <div class="col-4 p-t-10 p-b-10 border">● 应聘前端开发 | 3 年工作经验</div>
+            <div class="col-4 p-t-10 p-b-10 border">● 应聘前端开发 | 4 年工作经验</div>
           </div>
         </div>
         <div class="box bg-gray-lightest">
-          ● Github：
-          <a href="https://github.com/nzbin" target="_blank">https://github.com/FredaFei</a>
+          ● 博客：
+          <a href="https://github.com/FredaFei/blogs" target="_blank">https://github.com/FredaFei/blogs</a>
         </div>
       </div>
     </section>
@@ -148,25 +148,27 @@
           ● 掌握<span>HTML+CSS</span>布局、移动端适配，遵循W3C规范编写有语义化、模块化的页面代码；
         </div>
         <div class="box bg-gray-lightest">
-          ● 熟悉JS<span>面向对象</span>机制、<span>事件模型</span>等，根据面向对象的思想使用JS/jQuery封装常用插件；
+          ● 熟悉JS<span>面向对象</span>机制、<span>事件模型</span>，熟悉原生<span>DOM</span>与<span>BOM</span>的使用；
         </div>
         <div class="box bg-gray-lightest">
           ● 熟悉<span>Promise</span>、<span>ES6/ES7</span>的使用；
         </div>
-        <div class="box bg-gray-lightest">
+        <div class="box bg-gray-lightest">● 熟悉<span>React</span>、<span>Vue</span>，和其周边库的使用；</div>
+        <div class="box bg-gray-lightest">● 熟悉<span>Less</span>、<span>Sass</span>、<span>TypeScript</span>等预处理工具；</div>
+        <!-- <div class="box bg-gray-lightest">
           ●
           熟悉<span>Vue</span>和周边库的使用，理解<span>生命周期</span>、<span>异步更新</span>、<span>数据响应式</span>、<span>虚拟DOM</span>、<span>性能优化</span>等；
-        </div>
-        <div class="box bg-gray-lightest">● 理解<span>React</span>思想，熟悉<span>React Hooks+TypeScript</span>的组合环境，能进行开发；
-        </div>
-        <div class="box bg-gray-lightest">
+        </div> -->
+        <!-- <div class="box bg-gray-lightest">
           ● 熟悉组件拆分和封装，能编写<span>项目公共组件</span>和<span>使用文档</span>，并对其做<span>单元测试</span>；
+        </div> -->
+        <div class="box bg-gray-lightest">
+          ●
+          熟悉<span>jest</span>、<span>chai</span>、<span>sinon</span>、<span>karma</span>等测试库的使用，结合<span>测试覆盖率</span>、<span>Travis
+            CI持续集成</span>提升项目质量和效率；
         </div>
         <div class="box bg-gray-lightest">
-          ● 熟悉<span>jest/chai/sinon/karma</span>的使用，和<span>测试覆盖率</span>和<span>Travis CI持续集成</span>；
-        </div>
-        <div class="box bg-gray-lightest">
-          ● 熟悉模块化、工程化开发流程、<span>Webpack</span>打包配置、<span>Yarn/Npm/Git</span>的使用；
+          ● 熟悉<span>Webpack</span>打包配置、<span>Yarn</span>、<span>Npm</span>、<span>Git</span>的使用；
         </div>
         <div class="box bg-gray-lightest">
           ● 了解<span>HTTP协议</span>，具备基本的英文技术文档阅读能力；
@@ -178,26 +180,39 @@
       <h1 class="f-s-18 f-w-900 m-b-20">开源项目</h1>
       <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest">
+          <a href="https://github.com/FredaFei/AUI" class="link" target="_blank">● AUI（基于React Hooks + Typescript
+            的组件库）</a>
+          <a href="https://www.jetbrains.com/opensource/">2020年6月拿到 <span>JetBrains Open Source license(s)</span></a>
+        </div>
+        <div class="box bg-gray-lightest">
           <a href="https://github.com/FredaFei/amazing-ui" class="link" target="_blank">● amazing-ui（基于 Vue 2.0
             的桌面端组件库）</a>
           <a href="https://www.jetbrains.com/opensource/">2019年5月拿到 <span>JetBrains Open Source license(s)</span></a>
-        </div>
-        <div class="box bg-gray-lightest">
-          <a href="https://github.com/FredaFei/AUI" class="link" target="_blank">● AUI（基于React Hooks + Typescript
-            的组件库）</a>
-        </div>
-        <div class="box bg-gray-lightest">
-          <a href="https://github.com/FredaFei/react-ts-template" class="link" target="_blank">●
-            react-ts-template（基于React Hooks + Typescript 的基础环境配置）</a>
         </div>
       </div>
     </section>
     <section>
       <h1 class="f-s-18 f-w-900 m-b-20">工作经历</h1>
       <div class="boxes default m-b-20">
+        <div class="box bg-gray-lightest"> ● 浙江安正科技股份有限公司 （ 2021 年 6 月 ~ 至今 ）</div>
         <div class="box bg-gray-lightest">
-          ● 杭州华侨宝网络科技有限公司 （ 2018 年 8 月 ~ 至今 ）
+          <p class="m-t-0 project-name">法医客户端</p>
+          <p>简介：基于三维可视化技术，提供损伤扫描鉴定</p>
+          <p>
+            角色：负责该项目中的<span>开放性损伤测量</span>、<span>大关节活动测量</span>、<span>人员管理</span>等功能的开发。使用的技术栈是<span>electron</span>、<span>React</span>、<span>TypeScript</span>，内部开发的<span>Webgl</span>库。
+            其中大关节测量功能需要对接传感器，来自动计算伤侧关节的活动倾斜角。
+          </p>
         </div>
+        <div class="box bg-gray-lightest">
+          <p class="m-t-0 project-name">公安现场勘验平台</p>
+          <p>简介：基于三维可视化技术，还原公安人员现场勘验情况</p>
+          <p>
+            角色：负责该项目中的<span>现场图制作</span>、<span>勘验笔录</span>、<span>照片制卷</span>三个模块的开发。使用的技术栈是<span>React</span>、<span>TypeScript</span>，内部开发的<span>Webgl</span>库。
+            开发方式上每个模块均是一个单独的<span>NPM</span>包，彼此独立。对外提供接口和使用文档，对内统一代码风格，添加单元测试、持续集成等提升开发效率。</p>
+        </div>
+      </div>
+      <div class="boxes default m-b-20">
+        <div class="box bg-gray-lightest"> ● 杭州华侨宝网络科技有限公司 （ 2018 年 8 月 ~ 2021 年 5 月 ）</div>
         <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name"><a href="http://www.ocepay.com/wap.html" class="link">华侨货币</a></p>
           <p>简介：提供线上本币与外币双向兑换服务，主要应用在<span>手机</span>和<span>微信</span>浏览器上。</p>
@@ -227,13 +242,13 @@
         <div class="box bg-gray-lightest">
           ● 国鼎文化科技产业发展股份有限公司 （ 2017 年 11 月 ~ 2018 年 7 月 ）
         </div>
-        <div class="box bg-gray-lightest">
+        <!-- <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name">西牛买买买</p>
           <p>简介：线上数码商店购物平台，支持多家店铺。主要应用在<span>PC端</span>浏览器上</p>
           <p>
             角色：负责PC端<span>首页、购物车、个人中心</span>等功能。技术栈采用<span>jQ</span>，实现购物车<span>多店铺选中、删除、数量控制</span>等复杂的响应式交互。在做该项目时，为了代码结构清晰，利于阅读维护，拆分功能封装成组件，最后把它们有序的串起来。
           </p>
-        </div>
+        </div> -->
         <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name">可溯金融</p>
           <p>简介：可溯金融投资平台，主要应用在<span>手机端</span>浏览器上</p>
@@ -243,7 +258,7 @@
           </p>
         </div>
       </div>
-      <div class="boxes default m-b-20">
+      <!-- <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest">
           ● 杭州牛印科技有限公司 （ 2017 年 7 月 ~ 2017 年 11 月 ）
         </div>
@@ -255,7 +270,7 @@
             先根据产品原型和接口文档，对每个模块填充数据和业务逻辑，再与后端联调。
           </p>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
 
