--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
   <!--[if lt IE 9]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-  <a href="https://github.com/FredaFei">
+  <!-- <a href="https://github.com/FredaFei">
     <img style="position: absolute; z-index: 5; top: 0; right: 0; border: 0;"
       src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" />
-  </a>
+  </a> -->
 
   <main class="page">
     <section>
@@ -131,12 +131,12 @@
           <div class="row">
             <div class="col-4 p-t-10 p-b-10">● 费晗 | 女 | 1993</div>
             <div class="col-4 p-t-10 p-b-10 border">● 武汉生物工程学院 | 计算机网络</div>
-            <div class="col-4 p-t-10 p-b-10 border">● 应聘前端开发 | 3 年工作经验</div>
+            <div class="col-4 p-t-10 p-b-10 border">● 应聘前端开发 | 6 年工作经验</div>
           </div>
         </div>
         <div class="box bg-gray-lightest">
           ● Github：
-          <a href="https://github.com/nzbin" target="_blank">https://github.com/FredaFei</a>
+          <a href="https://github.com/FredaFei" target="_blank">https://github.com/FredaFei</a>
         </div>
       </div>
     </section>
@@ -145,26 +145,23 @@
       <h1 class="f-s-18 f-w-900 m-b-20">技术优势</h1>
       <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest">
-          ● 掌握<span>HTML+CSS</span>布局、移动端适配，遵循W3C规范编写有语义化、模块化的页面代码；
+          ● 熟悉<span>HTML+CSS</span>布局、移动端适配，遵循W3C规范编写有语义化、模块化的页面代码；
         </div>
         <div class="box bg-gray-lightest">
-          ● 熟悉JS<span>面向对象</span>机制、<span>事件模型</span>等，根据面向对象的思想使用JS/jQuery封装常用插件；
+          ● 熟悉JS<span>面向对象</span>机制、<span>事件模型</span>等、面向对象的思想；
         </div>
         <div class="box bg-gray-lightest">
           ● 熟悉<span>Promise</span>、<span>ES6/ES7</span>的使用；
         </div>
         <div class="box bg-gray-lightest">
-          ●
-          熟悉<span>Vue</span>和周边库的使用，理解<span>生命周期</span>、<span>异步更新</span>、<span>数据响应式</span>、<span>虚拟DOM</span>、<span>性能优化</span>等；
-        </div>
-        <div class="box bg-gray-lightest">● 理解<span>React</span>思想，熟悉<span>React Hooks+TypeScript</span>的组合环境，能进行开发；
+          ● 熟悉<span>React Hooks+TypeScript</span>的组合开发环境；
         </div>
         <div class="box bg-gray-lightest">
           ● 熟悉组件拆分和封装，能编写<span>项目公共组件</span>和<span>使用文档</span>，并对其做<span>单元测试</span>；
         </div>
-        <div class="box bg-gray-lightest">
+        <!-- <div class="box bg-gray-lightest">
           ● 熟悉<span>jest/chai/sinon/karma</span>的使用，和<span>测试覆盖率</span>和<span>Travis CI持续集成</span>；
-        </div>
+        </div> -->
         <div class="box bg-gray-lightest">
           ● 熟悉模块化、工程化开发流程、<span>Webpack</span>打包配置、<span>Yarn/Npm/Git</span>的使用；
         </div>
@@ -180,23 +177,47 @@
         <div class="box bg-gray-lightest">
           <a href="https://github.com/FredaFei/amazing-ui" class="link" target="_blank">● amazing-ui（基于 Vue 2.0
             的桌面端组件库）</a>
-          <a href="https://www.jetbrains.com/opensource/">2019年5月拿到 <span>JetBrains Open Source license(s)</span></a>
+          <!-- <a href="https://www.jetbrains.com/opensource/">2019年5月拿到 <span>JetBrains Open Source license(s)</span></a> -->
         </div>
         <div class="box bg-gray-lightest">
           <a href="https://github.com/FredaFei/AUI" class="link" target="_blank">● AUI（基于React Hooks + Typescript
             的组件库）</a>
         </div>
-        <div class="box bg-gray-lightest">
+        <!-- <div class="box bg-gray-lightest">
           <a href="https://github.com/FredaFei/react-ts-template" class="link" target="_blank">●
             react-ts-template（基于React Hooks + Typescript 的基础环境配置）</a>
-        </div>
+        </div> -->
       </div>
     </section>
     <section>
       <h1 class="f-s-18 f-w-900 m-b-20">工作经历</h1>
       <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest">
-          ● 杭州华侨宝网络科技有限公司 （ 2018 年 8 月 ~ 至今 ）
+          ● 浙江安正科技有限公司 （ 2020 年 6 月 ~ 2023年10月 ）
+        </div>
+        <div class="box bg-gray-lightest">
+          <p class="m-t-0 project-name"><a href="https://www.reality3d.cn/donghuahuanyuan" class="link">Action 3D</a></p>
+          <p>简介：以多元数据融合展示技术，支持将实景三维、虚拟三维、动画数据融合，实现案事故场景、动作、时间的极致还原的<span>动画制作软件</span>。</p>
+          <p>
+            角色：负责该项目的<span>动画制作模块</span>，及与三维库的对接方案设计和实现。使用<span>Electron</span>、<span>React</span>，配合<span>TypeScript</span>开发该客户端，
+            使用私有的state通信库处理<span>持久化</span>和临时状态在多个<span>webview</span>窗口之间的通信。
+          </p>
+        </div>
+        <div class="box bg-gray-lightest">
+          <p class="m-t-0 project-name"><a href="https://www.reality3d.cn" class="link">臻3D平台</a></p>
+          <p>简介：基于<span>实景三维</span>复制技术，实现多维数据的快速采集、处理和成像展示，100% 还原真实世界，是“机器视觉 + 场景数字化”智慧平台。</p>
+          <p>
+            角色：负责该项目的业务模块，及该业务与三维的对接方案设计和实现。使用<span>React</span>开发<span>三维实景</span>平台，配合<span>TypeScript</span>
+            和<span>ESLint</span>，统一项目代码风格。优化项目结构，拆分出组件库、工具库、桥接器等公共模块，
+            添加模块间的依赖检测，避免模块间的相互依赖。对接私有的<span>Webgl</span>库，处理React组件的状态与Webgl库、后端三者之间的通信和状态管理，对接流程的文档整理。
+            使用GitLab CI 和Docker 做自动化部署、版本备份。
+            <!-- 优化项目使用<span>Webpack</span>打包后的体积，将文件体积减少了50%。 -->
+          </p>
+        </div>
+      </div>
+      <div class="boxes default m-b-20">
+        <div class="box bg-gray-lightest">
+          ● 杭州华侨宝网络科技有限公司 （ 2018 年 8 月 ~ 2020年5月 ）
         </div>
         <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name"><a href="http://www.ocepay.com/wap.html" class="link">华侨货币</a></p>
@@ -207,33 +228,18 @@
             为提高开发效率，降低维护成本，针对该项目定制了一套<span>组件库</span>，其中<span>公共组件14个</span>，<span>业务组件18个</span>，并为其编写了<span>单元测试和使用文档</span>。业务代码采用高内聚低耦合原则，与组件库配合。为后面两次的版本更新缩减了共一周的开发时间，团队的技术水平也更上一层台阶。
           </p>
         </div>
-        <div class="box bg-gray-lightest">
-          <p class="m-t-0 project-name"><a href="https://m.qiaoxingtx.com/webapps/shop.html#/" class="link">侨行天下</a></p>
-          <p>简介：购物商城和黄金理财，主要应用在<span>手机</span>和<span>微信</span>浏览器上。</p>
-          <p>
-            角色：负责该项目<span>H5</span>端的<span>购物商城和黄金理财</span>两个模块。考虑到项目历史原因和后期迭代、重构等因素，向负责人提出购物商城使用<span>前后分离+Vue</span>技术栈开发的方案，黄金理财依旧使用<span>jQ</span>开发。其中黄金理财交互较为复杂，需让期限、克重（两者的标尺刻度均非平均）支持<span>拖动</span>和手动输入，继而收益也跟随改变。拖动使用了<span>原生touch事件</span>，为使拖动效果更流畅，使用了<span>节流机制</span>，拖动距离与刻度之间的转换经过一番研究后得出公式解决。
-          </p>
-        </div>
-        <div class="box bg-gray-lightest">
-          <p class="m-t-0 project-name"><a href="https://github.com/FredaFei/mutile-webpack" class="link">活动多页面配置</a>
-          </p>
-          <p>简介：为多个活动独立开发打包配置，其活动页面主要应用在<span>APP</span>和<span>微信</span>浏览器上。</p>
-          <p>
-            角色：负责该项目在<span>开发和打包环境的配置</span>。因运营需要，活动频繁。为开发便利和可维护性，使用<span>Webpack</span>配置了一套适用于活动的<span>多页面</span>打包环境。该配置支持对指定的活动单个打包，和多个活动一起打包，打包后的文件，以活动名称为目录，每个活动可独立发布上线。由此在环境上做到了复用，开发者只需要关心活动的业务开发。
-          </p>
-        </div>
       </div>
       <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest">
           ● 国鼎文化科技产业发展股份有限公司 （ 2017 年 11 月 ~ 2018 年 7 月 ）
         </div>
-        <div class="box bg-gray-lightest">
+        <!-- <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name">西牛买买买</p>
           <p>简介：线上数码商店购物平台，支持多家店铺。主要应用在<span>PC端</span>浏览器上</p>
           <p>
             角色：负责PC端<span>首页、购物车、个人中心</span>等功能。技术栈采用<span>jQ</span>，实现购物车<span>多店铺选中、删除、数量控制</span>等复杂的响应式交互。在做该项目时，为了代码结构清晰，利于阅读维护，拆分功能封装成组件，最后把它们有序的串起来。
           </p>
-        </div>
+        </div> -->
         <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name">可溯金融</p>
           <p>简介：可溯金融投资平台，主要应用在<span>手机端</span>浏览器上</p>
@@ -243,7 +249,7 @@
           </p>
         </div>
       </div>
-      <div class="boxes default m-b-20">
+      <!-- <div class="boxes default m-b-20">
         <div class="box bg-gray-lightest">
           ● 杭州牛印科技有限公司 （ 2017 年 7 月 ~ 2017 年 11 月 ）
         </div>
@@ -255,7 +261,7 @@
             先根据产品原型和接口文档，对每个模块填充数据和业务逻辑，再与后端联调。
           </p>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
 
