--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section>
       <h1 class="f-s-18 f-w-900 m-b-20">工作经历</h1>
       <div class="boxes default m-b-20">
-        <div class="box bg-gray-lightest"> ● 浙江安正科技股份有限公司 （ 2021 年 6 月 ~ 至今 ）</div>
+        <div class="box bg-gray-lightest"> ● 浙江安正科技股份有限公司 （ 2020 年 6 月 ~ 2023年10月 ）</div>
         <div class="box bg-gray-lightest">
           <p class="m-t-0 project-name"><a href="https://www.reality3d.cn/donghuahuanyuan" class="link">Action 3D</a></p>
           <p>简介：以多元数据融合展示技术，支持将实景三维、虚拟三维、动画数据融合，实现案事故场景、动作、时间的极致还原的<span>动画制作软件</span>。</p>
